--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -116,6 +116,10 @@
         android:visibility="gone"
         tools:visibility="visible">
 
+        <HorizontalScrollView
+            android:scrollbars="none"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -343,6 +347,7 @@
                 android:textSize="@dimen/ts_20"/>
 
         </LinearLayout>
+        </HorizontalScrollView>
 
 
         <LinearLayout
