--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/previewPlayerPlace"
                 android:layout_width="@dimen/vs_640"
                 android:layout_height="@dimen/vs_360"
+                android:layout_marginBottom="@dimen/vs_10"
                 android:visibility="gone" />
 
             <LinearLayout
