--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -369,26 +369,24 @@
 
     <TextView
         android:id="@+id/tvTime"
-		android:paddingRight="@dimen/vs_20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginTop="5mm"
-        android:layout_marginRight="10mm"
-        android:background="@android:color/transparent"
+        android:layout_marginRight="20mm"
+        android:background="@drawable/shape_user_focus"
         android:gravity="center"
         android:textColor="@android:color/white"
-        android:textSize="22mm"
+        android:textSize="30mm"
         android:visibility="gone" />
     <TextView
         android:id="@+id/tvNetSpeed"
-		android:paddingRight="@dimen/vs_20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="5mm"
-        android:layout_marginRight="10mm"
-        android:background="@android:color/transparent"
+        android:layout_marginRight="20mm"
+        android:background="@drawable/shape_user_focus"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="22mm"
