--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -369,6 +369,8 @@
 
     <TextView
         android:id="@+id/tvTime"
+        android:paddingLeft="@dimen/vs_5"
+        android:paddingRight="@dimen/vs_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -381,6 +383,8 @@
         android:visibility="gone" />
     <TextView
         android:id="@+id/tvNetSpeed"
+        android:paddingLeft="@dimen/vs_5"
+        android:paddingRight="@dimen/vs_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
