--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -380,6 +380,7 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="30mm"
+        android:textStyle="bold"
         android:visibility="gone" />
     <TextView
         android:id="@+id/tvNetSpeed"
