--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -130,7 +130,8 @@
 					android:fadeScrollbars="false"
 					android:listSelector="@drawable/item_bg_selector_left"
 					android:padding="10dp"
-					android:scrollbars="none" />
+					android:scrollbars="none"
+					app:tv_selectedItemIsCentered="true"/>
 
 			</LinearLayout>
 
@@ -200,7 +201,8 @@
 				android:focusable="true"
 				android:listSelector="@drawable/item_bg_selector_right"
 				android:padding="5dp"
-				android:scrollbars="none" />
+				android:scrollbars="none"
+				app:tv_selectedItemIsCentered="true"/>
 
 			<LinearLayout
 				android:layout_width="1dp"
