--- a/app/src/main/res/drawable/shape_thumb_bottom_name.xml
+++ b/app/src/main/res/drawable/shape_thumb_bottom_name.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:bottomLeftRadius="@dimen/vs_10"
-        android:bottomRightRadius="@dimen/vs_10" />
-    <solid android:color="@color/color_99000000" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true">
+        <shape>
+            <corners
+                android:bottomLeftRadius="@dimen/vs_10"
+                android:bottomRightRadius="@dimen/vs_10" />
+            <solid android:color="@color/color_1890FF" />
+        </shape>
+    </item>
+    <item android:state_focused="false">
+        <shape>
+            <corners
+                android:bottomLeftRadius="@dimen/vs_10"
+                android:bottomRightRadius="@dimen/vs_10" />
+            <solid android:color="@color/color_99000000" />
+        </shape>
+    </item>
+</selector>
