--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -14,7 +14,7 @@
         android:paddingLeft="@dimen/vs_50"
         android:paddingTop="@dimen/vs_20"
         android:paddingRight="@dimen/vs_50"
-        android:paddingBottom="@dimen/vs_20">
+        android:paddingBottom="@dimen/vs_15">
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/vs_50"
             android:layout_gravity="center"
-            android:layout_marginRight="@dimen/vs_10"
-            android:focusable="false"
+            android:layout_marginStart="@dimen/vs_10"
+            android:layout_marginEnd="@dimen/vs_10"            android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="center"
             android:text="确定键删除当前选中记录"
@@ -79,9 +79,9 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:paddingLeft="@dimen/vs_60"
-        android:paddingTop="@dimen/vs_10"
+        android:paddingTop="@dimen/vs_30"
         android:paddingRight="@dimen/vs_60"
-        android:paddingBottom="@dimen/vs_10"
+        android:paddingBottom="@dimen/vs_30"
         app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
         app:tv_selectedItemIsCentered="true"
         app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
